@startuml

!theme plain
skinparam linetype ortho

entity "Player" {
  * playerId: Long <<generated>> (PK)
  --
  playerName: String
  playerPosition: String
  playerAge: int
  birthday: String
  team: String
}

entity "PlayerReport" {
  * reportId: Long <<generated>> (PK)
  --
  playerStrengths: String
  playerWeaknesses: String
  playerSummary: String
}

entity "User" {
  * id: Long <<generated>> (PK)
  --
  name: String
  password: String
  email: String
}

entity "UserPlayerReview" {
  * reviewId: Long (PK)
  --
  review: String
  rating: int
  --
  user_id: Long (FK)
  player_id: Long (FK)
  report_id: Long (FK)
}

Player ||--|| PlayerReport : "1" Player has "report"
Player ||--o{ UserPlayerReview : "1" Player has "reviews"
PlayerReport ||--o{ UserPlayerReview : "1" Report has "reviews"
User ||--o{ UserPlayerReview : "1" User has "reviews"

@enduml